# rusttamo

./: .info.md  Cargo.toml
src/: client.rs  main.rs  neuralnet.rs  tamo.rs  tamo.txt
