[package]
name = "rusttamo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.4"
ndarray = "0.15.6"
rand = "0.8.5"
[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "neuralnet"
path = "src/neuralnet.rs"